<resources>
    <string name="app_name">Chess</string>
    <string name="queen">Queen</string>
    <string name="knight">Knight</string>
    <string name="bishop">Bishop</string>
    <string name="rook">Rook</string>
    <string name="ten">10:00</string>
    <string name="return_move">Return Move</string>
    <string name="white_move">White Move</string>
    <string name="return_white_move">Return white move</string>
    <string name="return_black_move">Return black move</string>
</resources>