<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ChessBoard">

    <GridLayout
        android:id="@+id/boardGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="8"
        android:rowCount="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white_move"
        android:rotation="180"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/blackFigures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white_move"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteFigures" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/return_move"
        android:contentDescription="@string/return_black_move"
        android:textColor="@color/white"
        android:backgroundTint="#000000"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/boardGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/return_move"
        android:contentDescription="@string/return_white_move"
        android:textColor="@color/white"
        android:rotation="180"
        android:backgroundTint="#000000"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/boardGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/blackTimerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/timer_border"
        android:paddingVertical="3dp"
        android:paddingHorizontal="5dp"
        android:text="@string/ten"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/boardGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />


    <TextView
        android:id="@+id/whiteTimerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/timer_border"
        android:paddingVertical="3dp"
        android:paddingHorizontal="5dp"
        android:text="@string/ten"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/boardGrid" />

    <TextView
        android:id="@+id/blackTimerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/timer_border"
        android:paddingVertical="3dp"
        android:paddingHorizontal="5dp"
        android:rotation="180"
        android:text="@string/ten"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/boardGrid"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/whiteTimerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/timer_border"
        android:paddingVertical="3dp"
        android:paddingHorizontal="5dp"
        android:rotation="180"
        android:text="@string/ten"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardGrid" />

    <LinearLayout
        android:id="@+id/whiteFigures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:padding="5dp"
        android:background="@drawable/timer_border"
        android:backgroundTint="#F0D9B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteTimerLeft"/>

    <LinearLayout
        android:id="@+id/blackFigures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:rotation="180"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:padding="5dp"
        android:background="@drawable/timer_border"
        android:backgroundTint="#F0D9B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/blackTimerRight"/>

</androidx.constraintlayout.widget.ConstraintLayout>